upd: getall handle
